# genanki-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: apkg_col.rs  apkg_schema.rs  builtin_models.rs  card.rs  db_entries.rs  deck.rs  error.rs  lib.rs  model.rs  note.rs  package.rs  util.rs
src/builders/: field.rs  mod.rs  template.rs
