[package]
name = "genanki-rs"
version = "0.0.1"
authors = ["Yannick Funk <yannickfunk@yahoo.de>"]
edition = "2018"
description = "Rust Port of genanki"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version="0.25.1", features=["bundled"] }
tempfile = "3.2.0"
zip = "0.5.12"
serde_json = "1.0.64"
anyhow = "1.0.40"
fancy-regex = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
ramhorns = "0.10.2"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
pyo3 = "0.13.2"